menu-left jumping fix

--- a/src/app/layout/MenuLeft/MenuLeft.scss
+++ b/src/app/layout/MenuLeft/MenuLeft.scss
@@ -76,6 +76,7 @@ $local-border: 1px solid lighten($brand-secondary, 10);
       }
       .nav-link {
         color: #fff;
+        white-space: nowrap;//not take 2 lines while toggling
         .icon-container {
           display: inline-block;
           width: 1rem;
